Make tests compatible with Java 8.